added end points - PhoneAlertService, FireAlert Service, FloodAlert Service, PersonalInfo Service & Community Email are all completed.